# Smtp-Vrfy-Relay-Audit

./: .gitignore  LICENSE  README.md  SMTPHAK.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
smtp_audit/: __init__.py  __main__.py  cli.py  core.py
tests/: test_io.py
